<resources>
    <string name="app_name" translatable="false">OBDII Car Scanner</string>
    <string name="privacy_link" translatable="false">http://privacypolicyrangersaround.blogspot.com/2018/05/privacy-policy.html</string>
    <string name="terms_link" translatable="false">https://zawajulshariaprivacypolicy.blogspot.com/2024/08/terms-of-use.html</string>
    <string name="in_app_purchase_clear_mil_for_one_time_product_id" translatable="false">com.obsubscription.clearsinglemil</string>
    <string name="in_app_subscription_monthly_product_id" translatable="false">com.ob.monthly</string>
    <string name="in_app_subscription_yearly_product_id" translatable="false">com.ob.yearly</string>
    <string name="in_app_subscription_lifetime_product_id" translatable="false">com.obsubscription.lifetime</string>
    <string name="dev_link" translatable="false">https://play.google.com/store/apps/developer?id=AK%20Apps%20%26%20Games</string>
    <string name="base64key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAq8PGoRR5urBinoEjgn3Hd4DCsAAVVNuXTuLjcpDCEnvai37gdghJMwdRUDQvz1VLudob8HfxzpQcXwRiIX9XYABZkq7UKbuju1HEDV11iJC/6RtuFm9o9+iNdJDD8LpLu51erOMhloqIuJEvgKusZIuCsfBnRFnZR6lgnKwSVUPKdvoDtWKBVcLvuUSFGReIesWgydAWzfiv/FbOuRYKV2L77WcKGe63BRuRFgO2FSD4QyEoJRAwPSPxqCby7ukozX4sI+HYFurai6td7C0P1ky63gEo7oeTQP3t5luIEsExkfdbbcrzSx7hGaYuwqKk679U6UtwhoWE4VS80dqNbwIDAQAB</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="scan_diagnose_and_fix_issues">Scan, Diagnose and Fix Issues</string>
    <string name="car_doctor">OBDII Car Scanner</string>
    <string name="bluetooth_pairing">Bluetooth Pairing</string>
    <string-array name="speedTestRangeValues">
        <item>0</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>5000</item>
    </string-array>
    <string-array name="elmcomm_states" translatable="false">
        <item>@string/UNDEFINED</item>
        <item>@string/INITIALIZING</item>
        <item>@string/INITIALIZED</item>
        <item>@string/ECU_DETECT</item>
        <item>@string/ECU_DETECTED</item>
        <item>@string/CONNECTING</item>
        <item>@string/CONNECTED</item>
        <item>@string/NODATA</item>
        <item>@string/STOPPED</item>
        <item>@string/DISCONNECTED</item>
        <item>@string/BUSERROR</item>
        <item>@string/DATAERROR</item>
        <item>@string/RXERROR</item>
        <item>@string/ERROR</item>
    </string-array>
    <string-array name="measure_options" translatable="false">
        <item>@string/metric</item>
        <item>@string/imperial</item>
    </string-array>
    <string-array name="measure_option_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="title_pref_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_pref_gps" translatable="false">GPS</string>
    <string name="status_obd_no_support">NA</string>
    <string name="pref_bluetooth_title">Enable Bluetooth</string>
    <string name="pref_bluetooth_summaryOff">Turn on Bluetooth</string>
    <string name="pref_bluetooth_summaryOn">Turn off Bluetooth</string>
    <string name="pref_bluetooth_list_devices_summary">List of paired bluetooth devices.</string>
    <string name="pref_bluetooth_list_devices_title">Bluetooth Devices</string>
    <string name="pref_gps_category_title">Enable GPS</string>
    <string name="pref_gps_category_summaryOff">Turn on GPS</string>
    <string name="pref_gps_category_summaryOn">Turn off GPS</string>
    <string name="pref_gps_update_period_title">Update Period in Seconds</string>
    <string name="pref_gps_update_period_summary">The length of time between querying new position in seconds</string>
    <string name="pref_gps_distance_period_title">Update Period in Meters</string>
    <string name="pref_gps_distance_period_summary">Min Distance between location updates, in meters</string>
    <string name="default_dirname_full_logging">OBDReaderLogs</string>
    <string name="text_noerrors">There were no errors found.!</string>
    <string name="pref_gps_category" translatable="false">gps_category</string>
    <string name="Purchase_OK">OK</string>
    <string name="Purchase_ERROR">ERROR</string>
    <string name="Purchase_PENDING">Purchase is Pending. Please complete Transaction</string>
    <string name="Purchase_INVALID">Error : Invalid Purchase</string>
    <string name="Purchase_UNKNOWN">Purchase Status Unknown</string>
    <string name="Premium_User_Msg">Congrats! You are a premium user.</string>
    <string name="Purchase_OK_Dialog_Msg">Purchase Successful!</string>
    <string name="Purchase_OK_Dialog_Msg_Detail">Now app will restart and you will get rid of ads.</string>
    <string name="exit_dialog_message">Please rate us if you find this app useful or press Yes to exit.</string>
    <string name="dialog_loading_title">Loading…</string>
    <string name="dialog_loading_body">Loading application View, please wait…</string>
    <string name="text_bluetooth_nodevice">No Bluetooth device selected</string>
    <string name="text_bluetooth_error_connecting">Cannot connect to bluetooth device!</string>
    <string name="text_obd_command_failure">OBD command failure!</string>
    <string name="text_dtc_no_data">No DTC stored</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="available_devices">Available Devices</string>
    <string name="turn_on_bluetooth_to_see_devices">Turn on bluetooth to see devices</string>
    <string name="bluetooth_is_off">Bluetooth is Off</string>
    <string name="refresh">Refresh</string>
    <string name="code_details">Code Details</string>
    <string name="code">Code:</string>
    <string name="solution">Solution:</string>
    <string name="cause">Cause:</string>
    <string name="symptoms">Symptoms:</string>
    <string name="fault_codes">Fault codes</string>
    <string name="search">Search</string>
    <string name="obd_data">Obd Data</string>
    <string name="no_data_found">No Data Found</string>
    <string name="please_wait">Please wait.....</string>
    <string name="go_to_premimum">Go to Premimum</string>
    <string name="lifetime">Lifetime</string>
    <string name="unlimited_clear_mil">Unlimited Clear MIL</string>
    <string name="unlimited_car_diagnose">Unlimited Car Diagnose</string>
    <string name="unlimited_pro_features">Unlimited Pro Features</string>
    <string name="cancel_subscription_at_least_24_hours_before_renewal">Cancel Subscription at least 24 hours before renewal</string>
    <string name="get_this_package">Get this Package</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="subscription_policy">Subscription Policy</string>
    <string name="billing_begins_when_you_opt_for_a_subscription_user_can_cancel_subscription_within_24_hours_of_purchase_monthly_subscription_will_automatically_renews_until_user_cancel_it_user_can_cancel_any_time_in_google_account">Billing begins when you opt for a subscription, User can cancel subscription within 24 hours of Purchase, Monthly Subscription will automatically renews until user cancel it. User can cancel any time in Google Account.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="real_time">Real time</string>
    <string name="colent">Colent</string>
    <string name="air_intake_c">Air Intake \'C\'</string>
    <string name="engine_load">Engine Load</string>
    <string name="abs_load">ABS Load</string>
    <string name="throttle">Throttle</string>
    <string name="fuel_pressure">Fuel Pressure</string>
    <string name="mass_air_flow_g_s">Mass Air Flow \'g/s\'</string>
    <string name="air_fuel_ratio">Air/Fuel Ratio</string>
    <string name="barometric_pressure_psi">Barometric Pressure \'psi\'</string>
    <string name="troubles">troubles....</string>
    <string name="clear">Clear MIL</string>
    <string name="no_fault_found">No Fault Found</string>
    <string name="setting">Setting</string>
    <string name="adapter_type">Adapter Type</string>
    <string name="connect_via_bluetooth">Connect Via Bluetooth</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="connect_via_wi_fi">Connect Via Wi-Fi</string>
    <string name="theme">Theme</string>
    <string name="light_mode">Light Mode</string>
    <string name="switch_to_light_mode">Switch to light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="switch_to_dark_mode">Switch to dark Mode</string>
    <string name="connectivity">Connectivity</string>
    <string name="share">Share</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="rate">Rate</string>
    <string name="share_your_valuable_feedback">Share your valuable feedback</string>
    <string name="more">More</string>
    <string name="see_more_apps">See more apps</string>
    <string name="car_doctor_scanning_diagnosing_treatment">Car Doctor - Scanning|Diagnosing|Treatment</string>
    <string name="scanning">Scanning</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="disconnected">Disconnected</string>
    <string name="connecting">Connecting.....</string>
    <string name="saved_data">Save Data</string>
    <string name="connected_to">Connected to</string>
    <string name="unabletoconnect">Unable to Connect</string>
    <string name="UNDEFINED">Undefined</string>
    <string name="INITIALIZING">Initializing…</string>
    <string name="INITIALIZED">Initialized</string>
    <string name="ECU_DETECT">ECU detect…</string>
    <string name="ECU_DETECTED">ECU detected</string>
    <string name="CONNECTING">Connecting…</string>
    <string name="CONNECTED">Connected</string>
    <string name="NODATA">No data</string>
    <string name="STOPPED">Stopped</string>
    <string name="DISCONNECTED">Disconnected</string>
    <string name="BUSERROR">BUS error</string>
    <string name="DATAERROR">DATA error</string>
    <string name="RXERROR">RX error</string>
    <string name="ERROR">Error</string>
    <string name="obd_error">OBD protocol error</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="select_ecu_addr">Select ECU address …</string>
    <string name="none_found">No Devices Found</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string name="demo_stopped">DEMO mode stopped</string>
    <string name="demo_started">DEMO mode started</string>
    <string name="demo">Demo…</string>
    <string name="title_connected_to">Connected %s</string>
    <string name="obd_clearcodes">Clear fault codes</string>
    <string name="obd_clear_info">
This will reset the MIL and clear all emission-related diagnostic\n
information, including:\n
 - Diagnostic trouble codes\n
 - Freeze frame data\n
 - Oxygen sensor test data\n
 - Status of system monitoring tests\n
 - On-board monitoring tests results\n
 - Distance travelled while MIL activated\n
 - Number of warm-ups since DTCs cleared\n
 - Distance travelled since DTCs cleared\n
 - Engine run time while MIL activated\n
 - Time since DTCs cleared\n\n
Other manufacturer specific clearing/resetting actions may occur.\n
The loss of data may cause the vehicle to run poorly for a short \n
period of time while the ECU recalibrates itself.
    </string>
</resources>