<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".Activity.FaultCodeDetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:orientation="horizontal"
        android:paddingHorizontal="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/backrelative"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_centerInParent="true"
                android:src="@drawable/back_icon" />
        </RelativeLayout>


        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10sp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/code_details"
            android:textColor="@color/main_purple"
            android:textSize="18sp" />


        <RelativeLayout
            android:id="@+id/prorelative"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_gravity="center"
            android:visibility="invisible">

            <ImageView
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_centerInParent="true"
                android:src="@drawable/pro_icon" />
        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintBottom_toTopOf="@+id/banneradsview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10sp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/code"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/codestxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="20sp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/solution"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                    app:layout_constraintStart_toStartOf="parent" />

                <RelativeLayout
                    android:id="@+id/solutionspeak"
                    android:layout_width="40sp"
                    android:layout_height="40sp">
                    <ImageView
                        android:id="@+id/solic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/animated_sound_icon"/>
                </RelativeLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/solutiontxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:justificationMode="inter_word"
                android:textColor="@color/txt_grey"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/cause"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                    app:layout_constraintStart_toStartOf="parent" />

                <RelativeLayout
                    android:id="@+id/causespeak"
                    android:layout_width="40sp"
                    android:layout_height="40sp">
                    <ImageView
                        android:id="@+id/causeic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/animated_sound_icon"/>
                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/causetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:justificationMode="inter_word"
                android:textColor="@color/txt_grey"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10sp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/symptoms"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                    app:layout_constraintStart_toStartOf="parent" />

                <RelativeLayout
                    android:id="@+id/symptomsspeak"
                    android:layout_width="40sp"
                    android:layout_height="40sp">
                    <ImageView
                        android:id="@+id/symptomsic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/animated_sound_icon"/>
                </RelativeLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/symptomstxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:textColor="@color/txt_grey"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"/>

        </LinearLayout>



    </ScrollView>


    <com.akapps.obd2carscannerapp.Ads.BannerAdView
        android:id="@+id/banneradsview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>